kustomize/overlays/scots-lab/apps/romm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm
  namespace: romm
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: RomM
    gethomepage.dev/group: Applications
    gethomepage.dev/description: ROM Manager
    gethomepage.dev/icon: mdi-controller-classic
    gethomepage.dev/href: https://roms.srbii.com
    gethomepage.dev/weight: '26'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - roms.srbii.com
  - play.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: romm-svc
      port: 8080
